@@ -13,8 +13,8 @@ import io.github.intisy.ai.jvm.AiJava;
 import io.github.intisy.ai.jvm.Storage;
 import io.github.intisy.ai.shared.routing.ProxyPlugin;
 import io.github.intisy.ai.shared.routing.RoutingProfile;
-import io.github.intisy.ai.shared.spi.JsonCodec;
-import io.github.intisy.ai.shared.spi.Store;
+import io.github.intisy.ai.api.seam.JsonCodec;
+import io.github.intisy.ai.api.seam.Store;
 import io.github.intisy.ai.shared.store.AccountStore;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -30,6 +30,7 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.Collections;
 import java.util.List;
@@ -153,7 +154,7 @@ class OrgScanResilienceIntegrationTest {
     private static void stageProviderJar(Path targetDir) throws IOException {
         String staged = System.getProperty("exampleserver.providersDir");
         assertNotNull(staged, "exampleserver.providersDir must be set by the Gradle test task");
-        try (DirectoryStream<Path> stream = Files.newDirectoryStream(Path.of(staged), "*.jar")) {
+        try (DirectoryStream<Path> stream = Files.newDirectoryStream(Paths.get(staged), "*.jar")) {
             for (Path jar : stream) {
                 Files.copy(jar, targetDir.resolve(PROVIDER_ASSET_NAME));
                 return;
@@ -178,7 +179,13 @@ class OrgScanResilienceIntegrationTest {
                     .getResourceAsStream(classResourcePath)) {
                 if (in == null) throw new IllegalStateException("missing compiled class on test classpath: " + classResourcePath);
                 jar.putNextEntry(new JarEntry(classResourcePath));
-                jar.write(in.readAllBytes());
+                ByteArrayOutputStream classBytes = new ByteArrayOutputStream();
+                byte[] buffer = new byte[8192];
+                int read;
+                while ((read = in.read(buffer)) != -1) {
+                    classBytes.write(buffer, 0, read);
+                }
+                jar.write(classBytes.toByteArray());
                 jar.closeEntry();
             }
             jar.putNextEntry(new JarEntry("META-INF/services/" + ProxyPlugin.class.getName()));
