@@ -1,5 +1,6 @@
 package io.github.intisy.ai.jvm;
 
+import io.github.intisy.ai.seam.NoopLogger;
 import io.github.intisy.ai.jvm.backend.clock.SystemClock;
 import io.github.intisy.ai.jvm.backend.json.GsonJsonCodec;
 import io.github.intisy.ai.jvm.backend.notify.JsonlNotifier;
@@ -11,16 +12,16 @@ import io.github.intisy.ai.shared.logic.RouterOptions;
 import io.github.intisy.ai.shared.routing.HandlerResolver;
 import io.github.intisy.ai.shared.routing.ProxyHandler;
 import io.github.intisy.ai.shared.routing.RoutingProfile;
-import io.github.intisy.ai.shared.spi.http.HttpRequest;
-import io.github.intisy.ai.shared.spi.http.HttpResponse;
+import io.github.intisy.ai.api.seam.HttpRequest;
+import io.github.intisy.ai.api.seam.HttpResponse;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 import java.util.regex.Pattern;
 
@@ -77,7 +78,7 @@ class RouterJvmIntegrationTest {
             resp.body = "served " + ctx.model;
             return resp;
         });
-        return HandlerResolvers.fromRegistry(registry);
+        return HandlerResolvers.fromWireHandlers(registry);
     }
 
     private static RouterOptions optionsOn(FileStore store) {
@@ -87,10 +88,9 @@ class RouterJvmIntegrationTest {
         opts.store = store;
         opts.json = new GsonJsonCodec();
         opts.clock = new SystemClock();
-        opts.log = msg -> {
-        };
+        opts.log = NoopLogger.INSTANCE;
         opts.notify = new JsonlNotifier(store.configFolder());
-        opts.listProviders = () -> List.of("rl", "ok");
+        opts.listProviders = () -> Arrays.asList("rl", "ok");
         opts.configDir = store.configFolder().toString();
         return opts;
     }
@@ -118,7 +118,7 @@ class RouterJvmIntegrationTest {
         opusFallback.put("provider", "ok");
         opusFallback.put("model", "m-ok");
         Map<String, Object> doc = new HashMap<>();
-        doc.put("modelMap", Collections.singletonMap("opus", List.of(opus, opusFallback)));
+        doc.put("modelMap", Collections.singletonMap("opus", Arrays.asList(opus, opusFallback)));
         store.put(CONFIG_FILE, json.stringify(doc));
 
         RouterOptions opts = optionsOn(store);
@@ -142,7 +142,7 @@ class RouterJvmIntegrationTest {
         rl.put("provider", "rl");
         rl.put("model", "m-rl");
         Map<String, Object> doc = new HashMap<>();
-        doc.put("modelMap", Collections.singletonMap("opus", List.of(rl)));
+        doc.put("modelMap", Collections.singletonMap("opus", Arrays.asList(rl)));
         store.put(CONFIG_FILE, json.stringify(doc));
 
         RouterOptions opts = optionsOn(store);
